tests/fails/nilreturn.t
require("fail")
terra foo() : bar
end
